...
  }

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Aprende Quechua'),
        actions: [
          if (_currentUser != null)
            IconButton(
              icon: _buildUserAvatar(),
              onPressed: () {
                showDialog(
...
            
            ElevatedButton.icon(
              icon: const Icon(Icons.book, size: 24),
              label: const Padding(
                padding: EdgeInsets.all(12.0),
                child: Text(
                  'DICCIONARIO QUECHUA-ESPAÑOL',
                  style: TextStyle(fontSize: 18),
                ),
              ),
              onPressed: () {
                Navigator.push(
                  context,
...
